Pagina contacto, primera versión

--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,15 @@ code {
   vertical-align: middle;
 }
 /* END: imagen about me */
+
+/*iconos de contacto*/
+.bigicon {
+  font-size: 35px;
+  color: #000000;
+}
+
+#btn-primary{
+  color: white;
+  background-color: black;
+  border-color: black;
+}
