New Portafolio Page

--- a/css/style.css
+++ b/css/style.css
@@ -134,13 +134,16 @@ code {
 /* END: imagen about me */
 
 /*iconos de contacto*/
+/*
 .bigicon {
   font-size: 35px;
   color: #000000;
 }
-
-#btn-primary{
+*/
+/*
+.btn-primary{
   color: white;
   background-color: black;
   border-color: black;
 }
+*/
