--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,46 @@
-/* Francisco Franco Martinez */
-*{
-  margin: 0px;  
+* {
+  margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
+/*ejemplo de nesting*/
+main {
+  margin: 30px; }
+  main h1 {
+    text-align: center;
+    background: linear-gradient(70deg, #e6e6e6, #f7f7f7);
+    color: #514B64; }
 
 body {
   background: linear-gradient(70deg, #e6e6e6, #f7f7f7);
   color: #514B64;
-  min-height: 100vh;
-}
-
-h1{
-  text-align: center;
-}
+  min-height: 100vh; }
 
 code {
   background: #fff;
   padding: 0.2rem;
   border-radius: 0.2rem;
-  margin: 0 0.3rem;
-}
+  margin: 0 0.3rem; }
 
 /* BEGIN: cards in servicios */
 /*transition, transform, scale*/
-.card{
+/*ejemplo de nesting*/
+.card {
   border-radius: 4px;
-  background: #fff;
-  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  background: white;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow, 0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
   padding: 14px 80px 18px 36px;
-  cursor: pointer;
-}
+  cursor: pointer; }
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06); }
 
-.card:hover{
-   transform: scale(1.05);
-   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
-/* BEGIN: efecto sobre servicio 2 */
-/* use transition, transform*/
-.container_foto {
-	background-color: rgba(57, 62, 93, 0.7);
-	/* padding: 0; */
-	overflow: hidden;
-	/* max-width: 350px; */
-	/* margin: 5px; */
-}
-
-.container_foto img {
-	width: 100%;
-	top: 0;
-	left: 0;
-	/* opacity: 0.4; */
-	-webkit-transition: all 4s ease;
-	-moz-transition: all 4s ease;
-	-o-transition: all 4s ease;
-	-ms-transition: all 4s ease;
-	transition: all 4s ease;
-}
-
-.container_foto:hover {
-	cursor: pointer;
-}
-
-.container_foto:hover img {
-	/* opacity: 0.1; */
-	transform: scale(1.5);
-}
-
-.container_foto:hover article {
-	transform: translate(2px, -69px);
-	-webkit-transform: translate(2px, -69px);
-	-moz-transform: translate(2px, -69px);
-	-o-transform: translate(2px, -69px);
-	-ms-transform: translate(2px, -69px);
-}
 /* END: efecto sobre servicio 2 */
-
 /* Flip Cards CSS */
 .card-container {
-  perspective: 700px;
-}
+  perspective: 700px; }
+
 .card-flip {
   position: relative;
   width: 100%;
@@ -88,33 +48,28 @@ code {
   height: auto;
   transition: all 0.5s ease-out;
   background: white;
-  border: none;
-}
+  border: none; }
 
 .card-flip div {
   backface-visibility: hidden;
   transform-style: preserve-3d;
   height: 100%;
   width: 100%;
-  border: none;
-}
+  border: none; }
 
 .card-flip .front {
   position: relative;
-  z-index: 1;
-}
+  z-index: 1; }
 
 .card-flip .back {
   position: relative;
   z-index: 0;
-  transform: rotateY(-180deg);
-}
+  transform: rotateY(-180deg); }
 
 .card-container:hover .card-flip {
-  transform: rotateY(180deg);
-}
-/* END: cards in servicios */
+  transform: rotateY(180deg); }
 
+/* END: cards in servicios */
 /* BEGIN: imagen about me */
 .circular--landscape {
   display: flex;
@@ -122,28 +77,19 @@ code {
   width: 800px;
   height: 800px;
   overflow: hidden;
-  border-radius: 50%;
-}
+  border-radius: 50%; }
+  .circular--landscapeimg {
+    width: auto;
+    height: 100%;
+    margin-left: -100px;
+    vertical-align: middle; }
 
-.circular--landscape img {
-  width: auto;
-  height: 100%;
-  margin-left: -100px;
-  vertical-align: middle;
-}
 /* END: imagen about me */
-
-/*iconos de contacto*/
-/*
-.bigicon {
-  font-size: 35px;
-  color: #000000;
-}
-*/
-/*
-.btn-primary{
+.form-group .btn-contact {
   color: white;
-  background-color: black;
-  border-color: black;
-}
-*/
+  background-color: black; }
+
+footer {
+  box-sizing: border-box; }
+  footer .container {
+    position: absolute; }
